# Focus-AI

./: .env.example  .gitignore  BUGS.md  BUGS_FIXED.md  QUICK_IMPLEMENTATION_GUIDE.md  README.md  SETTINGS_FEATURE_CHECKLIST.md  TASKS.md  commit_today.sh  docker-compose.yml  nginx.conf  setup.sh  test_fixes.sh
backend/: .dockerignore  Dockerfile  PYTHON_VERSION.md  README.md  SECURITY.md  alembic.ini  check_gemini_models.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements.txt  run_tests.sh  setup_ollama.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_activation_fields.py  003_add_history_indexes.py  004_create_api_keys.py  005_add_feedback_table.py  006_add_user_profile_fields.py
backend/examples/: training_integration.py
backend/scripts/: setup_gpu.sh
backend/src/: config.py  main.py
backend/src/domain/: api_key.py  learning_session.py  qa.py  training_example.py  user.py
backend/src/infrastructure/: identity.py
backend/src/presentation/: analytics_routes.py  api_key_routes.py  auth_routes.py  feedback_routes.py  notification_routes.py  (+2 more)
backend/tests/: conftest.py  test_api_gateway.py  test_api_key_management.py  test_ask_question_use_case.py  test_auth_service.py  test_cache_service.py  test_cache_service_advanced.py  test_chain_validator_service.py  test_create_session_use_case.py  test_debug_mode.py  test_identity.py  test_junior_llm_service.py  test_login_use_case.py  test_metrics_service.py  test_model_router.py  test_ownership.py  test_qa_entity.py  test_rabbitmq_service.py  test_rag.py  test_rate_limiter.py  test_register_use_case.py  test_sanitizer.py  test_senior_llm_service.py  test_session_entity.py  test_user_entity.py
(+128 files in other folders)
